OptUsbDevice: コンパイル時定数Commad…をUsbCommand…にリネーム、…ProgramのprogramDataにconst修飾を追加、SendCommandとReadROM関数を追加

--- a/optusbx.vcxproj.filters
+++ b/optusbx.vcxproj.filters
@@ -41,5 +41,11 @@
     <ClInclude Include="Sleep.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="agb_prog.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="AGBProgram.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
