--- a/optusbx.vcxproj
+++ b/optusbx.vcxproj
@@ -195,6 +195,8 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AGBProgram.hpp" />
+    <ClInclude Include="agb_prog.h" />
     <ClInclude Include="LibUsb.hpp" />
     <ClInclude Include="LibUsbDevice.hpp" />
     <ClInclude Include="OptUsbDevice.hpp" />
